ch-ch-ch-changes

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ We will miss you Helsinki!</p>
                         <h4>Dorota Glowacka</h4></a>
                     <div class="bio">
                         <p>Lecturer</p>
-                <a href="mailto:dorota@glowacka.org">dorota@glowacka.org</a>
+                <a href="mailto:dorota.glowacka@ed.ac.uk">dorota.glowacka@ed.ac.uk</a>
                     </div>
                     </div>
                 </div>
@@ -255,7 +255,7 @@ We will miss you Helsinki!</p>
                         <h4>Alan Medlar</h4></a>
                     <div class="bio">
                         <p>Visiting researcher</p>
-                <a href="mailto:alan@medlar.org">alan@medlar.org</a>
+                <a href="mailto:alan.j.medlar@helsinki.fi">alan.j.medlar@helsinki.fi</a>
                     </div>
                     </div>
                 </div>
