--- a/publications.html
+++ b/publications.html
@@ -49,7 +49,45 @@
 <!-- <p><a href="/bib/sampa-pubs.bib">Download BibTeX.</a></p> -->
 
 <table class="table">
-<tbody>
+    <tbody>
+
+    <tr>
+        <td>
+            <span class="date"><big><strong>2018</strong></big><br /></span>
+        </td>
+        <td class="publication">
+            <span class="pubtitle">
+                <img src="img/pdficon_small.png" width="16" height="16" alt="PDF" />                
+                <a href="https://dl.acm.org/citation.cfm?id=3269297">How Consistent is Relevance Feedback in Exploratory Search?</a>.
+            </span><br />
+            <span class="authors">
+                Alan Medlar and Dorota Glowacka.
+            </span><br />            <span class="venuetype"></span><span class="venue">CIKM 2018</span>.
+            <br />
+            <span class="links">
+            </span>
+        </td>
+    </tr>
+
+    <tr>
+        <td>
+        </td>
+        <td class="publication">
+            <span class="pubtitle">
+                <img src="img/pdficon_small.png" width="16"
+                    height="16" alt="PDF" />
+                <a href="https://dl.acm.org/citation.cfm?id=3231593">Interactive Intent Modeling for Exploratory Search</a>.
+            </span><br />
+            <span class="authors">
+                Tuukka Ruotsalo, Jaakko Peltonen, Manuel JA Eugster, Dorota Głowacka, Patrik Floréen, Petri Myllymäki, Giulio Jacucci and Samuel Kaski.
+            </span><br />
+            <span class="venuetype"></span><span class="venue">TOIS, 36 (4), Article 44</span>.
+            <br />
+            <span class="links">
+            </span>
+        </td>
+    </tr>
+
 	<tr>
 		<td>
             <span class="date"><big><strong>2017</strong></big><br /></span>
@@ -896,8 +934,8 @@
 
       <div class="footer">
   <p>
-    <a href="http://www.ed.ac.uk/informatics">School of Informatics</a>,
-    <a href="http://www.ed.ac.uk/">The University of Edinburgh</a>
+    <a href="https://www.helsinki.fi/en/computer-science">Department of Computer Science</a>,
+    <a href="https://www.helsinki.fi/en/">University of Helsinki</a>
   </p>
 </div>
 
