--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ at <a href="https://www.cikm2018.units.it/">CIKM 2018</a> in Torino, Italy.</p>
                         <h4>Dorota Glowacka</h4></a>
                     <div class="bio">
                         <p>Assistant Professor</p>
-                <a href="mailto:dorota.glowacka@ed.ac.uk">dorota.glowacka@ed.ac.uk</a>
+                <a href="mailto:glowacka@cs.helsinki.fi">glowacka@cs.helsinki.fi</a>
                     </div>
                     </div>
                 </div>
