--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ at <a href="https://www.cikm2018.units.it/">CIKM 2018</a> in Torino, Italy.</p>
                     <a href="https://scholar.google.fi/citations?user=sDZkDHQAAAAJ&amp;hl=en">
                         <h4>Dorota Glowacka</h4></a>
                     <div class="bio">
-                        <p>Assistant Professor</p>
+                        <p>Group Leader<br/>Assistant Professor</p>
                 <a href="mailto:glowacka@cs.helsinki.fi">glowacka@cs.helsinki.fi</a>
                     </div>
                     </div>
@@ -273,7 +273,7 @@ at <a href="https://www.cikm2018.units.it/">CIKM 2018</a> in Torino, Italy.</p>
                     <a href="https://scholar.google.fi/citations?user=JIKUSwIAAAAJ&amp;hl=en">
                         <h4>Alan Medlar</h4></a>
                     <div class="bio">
-                        <p>Post-doctoral researcher</p>
+                        <p>Co-group Leader<br/>Post-doctoral researcher</p>
                 <a href="mailto:alan.j.medlar@helsinki.fi">alan.j.medlar@helsinki.fi</a>
                     </div>
                     </div>
