--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="text">
         <div class="date">01 April 2019</div>
         
-            <p>We are looking to hire a <strong>PhD student</strong> to work on interactive information retrieval, user modelling and human-computer interation! Ideal starting date is Summer/Autumn 2019. We have yet to send out an official advertisement, but if you are interested, please send an up-to-date CV together with a description of your research interests to <a href="mailto:glowacka@cs.helsinki.fi">Dorota</a>. </p>
+            <p>We are looking to hire a <strong>PhD student</strong> to work on interactive information retrieval, user modelling and human-computer interaction! Ideal starting date is Summer/Autumn 2019. We have yet to send out an official advertisement, but if you are interested, please send an up-to-date CV together with a description of your research interests to <a href="mailto:glowacka@cs.helsinki.fi">Dorota</a>. </p>
 
         
     </div>
