--- a/teaching.html
+++ b/teaching.html
@@ -63,8 +63,10 @@
         <td>
             <h4>Topics in Cognitive Modelling in Interactive Information Retrieval</h4>
 
-            <p><a href="img/cogiir_lecture1.pdf">Lecture 1 (pdf)</a></p>
-            <p><a href="img/cogiir_lecture1.key">Lecture 1 (keynote)</a></p>
+            <p>
+                <a href="img/cogiir_lecture1.pdf">Lecture 1 (pdf)</a><br/>
+                <a href="img/cogiir_lecture1.key">Lecture 1 (keynote)</a>
+            </p>
             
         </td>
     </tr>
