--- a/teaching.html
+++ b/teaching.html
@@ -73,9 +73,9 @@
             </p>
 
             <p>
-                <b>Paper suggestions:</b>
+                <b>Paper suggestions:</b><br/><br/>
                 
-                Interactive information retieval:
+                Interactive information retieval:<br/><br/>
 
                 <a href="http://eprints.bimcoordinator.co.uk/35/1/Introduction%20to%20Information%20Retrieval.pdf">Introduction to information retrieval</a><br/>
                 <a href="https://www.nowpublishers.com/article/DownloadSummary/INR-012">Methods for evaluating interactive information retrieval systems with users</a><br/>
@@ -83,7 +83,7 @@
                 <a href="https://strathprints.strath.ac.uk/2457/14/Ruthven_Lalmas_KER_2003_A_survey_on_the_use_of_relevance_feedback_for_information_access_systems.pdf">A survey on the use of relevance feedback for information access systems</a><br/>
                 <a href="https://dl.acm.org/citation.cfm?doid=959258.959260">Implicit feedback for inferring user preference: a bibliography</a><br/>
 
-                Cognitive modeling:
+                Cognitive modeling:<br/><br/>
 
                 <a href="https://webfiles.uci.edu/mdlee/LeeWagenmakers2013_Free.pdf">Bayesian Cognitive modeling: A practical course (many citations on pages 9-11)</a><br/>
                 <a href="https://pdfs.semanticscholar.org/fcf4/422d00cbd8115994248cead5bf9d3154d1b9.pdf">Models of categorization</a><br/>
