--- a/teaching.html
+++ b/teaching.html
@@ -83,7 +83,7 @@
                 <a href="https://strathprints.strath.ac.uk/2457/14/Ruthven_Lalmas_KER_2003_A_survey_on_the_use_of_relevance_feedback_for_information_access_systems.pdf">A survey on the use of relevance feedback for information access systems</a><br/>
                 <a href="https://dl.acm.org/citation.cfm?doid=959258.959260">Implicit feedback for inferring user preference: a bibliography</a><br/>
 
-                Cognitive modeling:<br/><br/>
+                <br/>Cognitive modeling:<br/><br/>
 
                 <a href="https://webfiles.uci.edu/mdlee/LeeWagenmakers2013_Free.pdf">Bayesian Cognitive modeling: A practical course (many citations on pages 9-11)</a><br/>
                 <a href="https://pdfs.semanticscholar.org/fcf4/422d00cbd8115994248cead5bf9d3154d1b9.pdf">Models of categorization</a><br/>
