--- a/teaching.html
+++ b/teaching.html
@@ -83,12 +83,16 @@
                 <a href="https://strathprints.strath.ac.uk/2457/14/Ruthven_Lalmas_KER_2003_A_survey_on_the_use_of_relevance_feedback_for_information_access_systems.pdf">A survey on the use of relevance feedback for information access systems</a><br/>
                 <a href="https://dl.acm.org/citation.cfm?doid=959258.959260">Implicit feedback for inferring user preference: a bibliography</a><br/>
 
+                <br/>Conferences: SIGIR, IUI, CIKM, ASIST</br>
+                Journals: JASIST, IPM<br/>
+
                 <br/>Cognitive modeling:<br/><br/>
 
                 <a href="https://webfiles.uci.edu/mdlee/LeeWagenmakers2013_Free.pdf">Bayesian Cognitive modeling: A practical course (many citations on pages 9-11)</a><br/>
                 <a href="https://pdfs.semanticscholar.org/fcf4/422d00cbd8115994248cead5bf9d3154d1b9.pdf">Models of categorization</a><br/>
                 <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/9781119170174.epcn502">Bayesian methods in cognitive modeling</a><br/>
 
+                <br/>Journals: Journal of Mathematical Psychology, Trends in Cognitive Sciences (reviews)<br/>
             </p>
 
         </td>
