--- a/teaching.html
+++ b/teaching.html
@@ -61,6 +61,14 @@
 
     <tr>
         <td>
+            <h4>Bandits in Recommender Systems</h4>
+            <p>
+                <a href="img/bandits-recsys.pdf">RecSys Slides</a><br/>
+                <a href="https://nowpublishers.com/article/Details/INR-067">Bandit Algorithms in Information Retrieval (book - free during RecSys!)</a><br/>
+            </p>
+        </td>
+
+        <td>
             <h4>Topics in Cognitive Modelling in Interactive Information Retrieval</h4>
 
             <p>
