--- a/teaching.html
+++ b/teaching.html
@@ -65,7 +65,7 @@
             <h3>Bandits in Recommender Systems</h3>
             <p>
                 <a href="img/bandits-recsys.pdf">RecSys Slides</a><br/>
-                <a href="https://nowpublishers.com/article/Details/INR-067">Bandit Algorithms in Information Retrieval (book - free during RecSys!)</a><br/>
+                <a href="https://nowpublishers.com/article/Details/INR-067">Bandit Algorithms in Information Retrieval</a><br/>
             </p>
 
             </tr>
