--- a/ir.html
+++ b/ir.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>ESP group: IR course</title>
+        <title>ESP group: Information Retrieval</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="/css/bootstrap.min.css" rel="stylesheet">
         <link href="/css/sampa.css" rel="stylesheet">
@@ -57,7 +57,7 @@
 
           
 
-  <h2>IR course</h2>
+  <h2>Information Retrieval</h2>
 
           
 <div class="content">
@@ -66,8 +66,7 @@
 
     <tr>
         <td>
-            <h4>Lecture 1: Introduction and Historical Background</h4>
-            <p><a href="lectures/ir/IR-intro.pdf">Slides</a></p>
+            <p>Lecture 1: Introduction and Historical Background <a href="lectures/ir/IR-intro.pdf">Slides</a></p>
         </td>
     </tr>
 
