--- a/ir.html
+++ b/ir.html
@@ -66,7 +66,7 @@
 
     <tr>
         <td>
-            <p>Lecture 1: Introduction and Historical Background <a href="lectures/ir/IR-intro.pdf">Slides</a></p>
+            <a href="lectures/ir/IR-intro.pdf">Lecture 1: Introduction and Historical Background (pdf)</a>
         </td>
     </tr>
 
