--- a/ir.html
+++ b/ir.html
@@ -69,6 +69,7 @@
             <a href="lectures/ir/IR-intro.pdf">Lecture 1: Introduction and Historical Background (pdf)</a><br/>
             <a href="lectures/ir/DATA20021-Lecture2-web.pdf">Lecture 2: IR Jargon + Boolean Retrieval (pdf)</a><br/>
             <a href="lectures/ir/DATA20021-Lecture3-web.pdf">Lecture 3: Index Compression (pdf)</a>
+            <a href="lectures/ir/DATA20021-Lecture4-web.pdf">Lecture 4: Index Construction (pdf)</a>
         </td>
     </tr>
 
