--- a/ir.html
+++ b/ir.html
@@ -74,6 +74,7 @@
             <a href="lectures/ir/DATA20021-Lecture6-web.pdf">Lecture 6: Ranked Retrieval (pdf)</a><br/>
             <a href="lectures/ir/evaluation-IRs.pdf">Lecture 7: Evaluation (pdf)</a><br/>
             <a href="lectures/ir/relevance-feedback.pdf">Lecture 8: Relevance Feedback (pdf)</a><br/>
+            <a href="lectures/ir/interactive-IR.pdf">Lecture 9: Interactive Information Retrieval (pdf)</a><br/>
         </td>
     </tr>
 
