--- a/ir.html
+++ b/ir.html
@@ -75,6 +75,7 @@
             <a href="lectures/ir/evaluation-IRs.pdf">Lecture 7: Evaluation (pdf)</a><br/>
             <a href="lectures/ir/relevance-feedback.pdf">Lecture 8: Relevance Feedback (pdf)</a><br/>
             <a href="lectures/ir/interactive-IR.pdf">Lecture 9: Interactive Information Retrieval (pdf)</a><br/>
+            <a href="lectures/ir/IIR-assignment.pdf">Assignment 1: Interactive Information Retrieval (pdf)</a><br/>
         </td>
     </tr>
 
