--- a/ir.html
+++ b/ir.html
@@ -76,7 +76,8 @@
             <a href="lectures/ir/relevance-feedback.pdf">Lecture 8: Relevance Feedback (pdf)</a><br/>
             <a href="lectures/ir/interactive-IR.pdf">Lecture 9: Interactive Information Retrieval (pdf)</a><br/>
             <a href="lectures/ir/IIR-assignment.pdf">Assignment: Interactive Information Retrieval (pdf)</a><br/>
-            <a href="lectures/ir/interactive-IR2.pdf">Lecture 10: Interactive Information Retrieval 2 (pdf)</a><br/>
+            <a href="lectures/ir/interactive-IR2.pdf">Lecture 10: Interactive Information Retrieval Evaluation (pdf)</a><br/>
+            <a href="https://helsinkifi-my.sharepoint.com/:b:/g/personal/glowacka_ad_helsinki_fi/EWBehuiJ5PREkiSw5ED-EuIBzO5gEEZj0xj_CGwe-OgXEw?e=utveH8">Lecture 11: Multimedia Retrieval</a><br/>
         </td>
     </tr>
 
