--- a/404.html
+++ b/404.html
@@ -61,7 +61,8 @@
 
           
 <div class="content">
-<p>Sorry! The server can&rsquo;t find that page. Maybe go to <a href="/">the home page</a>.</p>
+<p>Sorry! The server can’t find that page. Maybe go to <a href="/">the home page</a>.</p>
+
 
 </div>
 
