--- a/code.html
+++ b/code.html
@@ -62,18 +62,18 @@
           
 <div class="content">
 <p>We try to publish all of our code promptly when publishing new research.  If
-you don&rsquo;t find the code you&rsquo;re looking for here, contact the corresponding
+you don’t find the code you’re looking for here, contact the corresponding
 authors.</p>
 
 <ul>
-<li><a href="https://github.com/uwsampa/">uwsampa on GitHub</a></li>
-<li><a href="http://grappa.io">grappa.io</a> &ndash; Grappa: scaling irregular applications on commodity clusters</li>
-<li><a href="http://approxbench.org/">approxbench.org</a> &ndash; benchmarks for
+  <li><a href="https://github.com/uwsampa/">uwsampa on GitHub</a></li>
+  <li><a href="http://grappa.io">grappa.io</a> – Grappa: scaling irregular applications on commodity clusters</li>
+  <li><a href="http://approxbench.org/">approxbench.org</a> – benchmarks for
 approximate computing</li>
-<li><a href="https://github.com/uwescience/raco#c-and-grappa-output-radish">SQL for PGAS</a> &ndash; compiling queries to high performance languages, including Grappa</li>
+  <li><a href="https://github.com/uwescience/raco#c-and-grappa-output-radish">SQL for PGAS</a> – compiling queries to high performance languages, including Grappa</li>
 </ul>
 
-<p>See the licensing terms within each project&rsquo;s codebase for the requisite legal
+<p>See the licensing terms within each project’s codebase for the requisite legal
 details.</p>
 
 </div>
