--- a/people.html
+++ b/people.html
@@ -252,7 +252,7 @@
       </dt>
       <dd>
         
-          <p>Co-group Leader<br />Post-doctoral researcher</p>
+          <p>Post-doctoral researcher</p>
 
         
       </dd>
