--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                     <a href="https://scholar.google.fi/citations?user=JIKUSwIAAAAJ&amp;hl=en">
                         <h4>Alan Medlar</h4></a>
                     <div class="bio">
-                        <p>Co-group Leader<br/>Post-doctoral researcher</p>
+                        <p>Post-doctoral researcher</p>
                 <a href="mailto:alan.j.medlar@helsinki.fi">alan.j.medlar@helsinki.fi</a>
                     </div>
                     </div>
