links to slides

--- a/teaching.html
+++ b/teaching.html
@@ -72,13 +72,13 @@
                 <h3>Exploratory search seminar</h3>
                 <p>
                     <a href="https://helsinkifi-my.sharepoint.com/:b:/g/personal/ajmedlar_ad_helsinki_fi/ERvSIBuxq_FPjEHBSEOfF4MB6mHh5WIguR8bWbr6smnUnQ?e=QdUfYZ">Lecture 1 (pdf)</a><br/>
-                    <a href="https://helsinkifi-my.sharepoint.com/:u:/g/personal/ajmedlar_ad_helsinki_fi/EaOgdBXMzIxCm-Z4kJMxx8YBQQKZWfThDDDadw6jfUhtig?e=dZBKoS">Lecture 1 (keynote)</a>
+                    <a href="https://helsinkifi-my.sharepoint.com/:u:/g/personal/ajmedlar_ad_helsinki_fi/EaOgdBXMzIxCm-Z4kJMxx8YByG2qXc5RFCZTjAzWw96Jvw?e=Cd0dds">Lecture 1 (keynote)</a>
                 </p>
 
                 <p>
                     <b>Reading:</b><br/><br/>
                     <a href="https://helsinkifi-my.sharepoint.com/:b:/g/personal/ajmedlar_ad_helsinki_fi/EVnI062rYQ1FsEWzFkIswvkBiejAXW-YJM-WEA_vlW9kiw?e=40CMIX">Exploratory search: From finding to understanding</a><br/>
-                    <a href="https://helsinkifi-my.sharepoint.com/:b:/g/personal/ajmedlar_ad_helsinki_fi/EUVjKOy7Y-9Lr1EiiLb6VOgBWg9k4FIly1Oz21medq68-A?e=esaONm">Exploratory search: Beyond the query-response paradigm</a>
+                    <a href="https://helsinkifi-my.sharepoint.com/:b:/g/personal/ajmedlar_ad_helsinki_fi/EUVjKOy7Y-9Lr1EiiLb6VOgBPdjhijMF_n64_vO6-qDHrA?e=b2HAQa">Exploratory search: Beyond the query-response paradigm</a>
                 </p>
             </tr>
 
