--- a/publications.html
+++ b/publications.html
@@ -83,7 +83,8 @@
             </span>
         </td>
 
-        <td class="publication">
+        <td></td>
+        <tr><td class="publication">
             <span class="pubtitle">
                 <img src="img/pdficon_small.png" width="16" height="16" alt="PDF" />
                 <a href="https://www.researchgate.net/profile/Denis-Kotkov/publication/357254796_The_Tag_Genome_Dataset_for_Books/links/61c37289abcb1b520ad8f27a/The-Tag-Genome-Dataset-for-Books.pdf">The Tag Genome Dataset for Books</a>
@@ -94,7 +95,7 @@
             <br />
             <span class="links">
             </span>
-        </td>
+        </td></tr>
     </tr>
 
 
@@ -114,6 +115,8 @@
             <span class="links">
             </span>
         </td>
+
+        <td></td>
         <td class="publication">
             <span class="pubtitle">
                 <img src="img/pdficon_small.png" width="16" height="16" alt="PDF" />
@@ -126,6 +129,8 @@
             <span class="links">
             </span>
         </td>
+
+        <td></td>
         <td class="publication">
             <span class="pubtitle">
                 <img src="img/pdficon_small.png" width="16" height="16" alt="PDF" />
@@ -138,6 +143,8 @@
             <span class="links">
             </span>
         </td>
+
+        <td></td>
         <td class="publication">
             <span class="pubtitle">
                 <img src="img/pdficon_small.png" width="16" height="16" alt="PDF" />
