--- a/publications.html
+++ b/publications.html
@@ -82,9 +82,11 @@
             <span class="links">
             </span>
         </td>
+    </tr>
 
+    <tr>
         <td></td>
-        <tr><td class="publication">
+        <td class="publication">
             <span class="pubtitle">
                 <img src="img/pdficon_small.png" width="16" height="16" alt="PDF" />
                 <a href="https://www.researchgate.net/profile/Denis-Kotkov/publication/357254796_The_Tag_Genome_Dataset_for_Books/links/61c37289abcb1b520ad8f27a/The-Tag-Genome-Dataset-for-Books.pdf">The Tag Genome Dataset for Books</a>
@@ -95,7 +97,7 @@
             <br />
             <span class="links">
             </span>
-        </td></tr>
+        </td>
     </tr>
 
 
@@ -115,7 +117,9 @@
             <span class="links">
             </span>
         </td>
+    </tr>
 
+    <tr>
         <td></td>
         <td class="publication">
             <span class="pubtitle">
@@ -129,7 +133,9 @@
             <span class="links">
             </span>
         </td>
+    </tr>
 
+    <tr>
         <td></td>
         <td class="publication">
             <span class="pubtitle">
@@ -143,7 +149,9 @@
             <span class="links">
             </span>
         </td>
+    </tr>
 
+    <tr>
         <td></td>
         <td class="publication">
             <span class="pubtitle">
