--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ at <a href="https://www.cikm2021.org/">CIKM 2021</a>.</p>
                     <a href="https://scholar.google.fi/citations?user=sDZkDHQAAAAJ&amp;hl=en">
                         <h4>Dorota Glowacka</h4></a>
                     <div class="bio">
-                        <p>Group Leader<br/>Assistant Professor</p>
+                        <p>Group Leader<br/>Associate Professor</p>
                 <a href="mailto:glowacka@cs.helsinki.fi">glowacka@cs.helsinki.fi</a>
                     </div>
                     </div>
@@ -324,7 +324,7 @@ at <a href="https://www.cikm2021.org/">CIKM 2021</a>.</p>
                     <a href="https://scholar.google.fi/citations?user=JIKUSwIAAAAJ&amp;hl=en">
                         <h4>Alan Medlar</h4></a>
                     <div class="bio">
-                        <p>Post-doctoral researcher</p>
+                        <p>University researcher</p>
                 <a href="mailto:alan.j.medlar@helsinki.fi">alan.j.medlar@helsinki.fi</a>
                     </div>
                     </div>
