--- a/publications.html
+++ b/publications.html
@@ -73,6 +73,22 @@
         <td class="publication">
             <span class="pubtitle">
                 <img src="img/pdficon_small.png" width="16" height="16" alt="PDF" />
+                <a href="https://www.sciencedirect.com/science/article/pii/S0306457322001133">Lexical ambiguity detection in professional discourse</a>
+            </span><br />
+            <span class="authors">
+                Yang Liu, Alan Medlar, Dorota Glowacka.
+            </span><br /><span class="venuetype"></span><span class="venue">Information Processing and Management</span>.
+            <br />
+            <span class="links">
+            </span>
+        </td>
+    </tr>
+
+    <tr>
+        <td></td>
+        <td class="publication">
+            <span class="pubtitle">
+                <img src="img/pdficon_small.png" width="16" height="16" alt="PDF" />
                 <a href="https://arxiv.org/pdf/2110.11744.pdf">Critiquing-based Modeling of Subjective Preferences</a>
             </span><br />
             <span class="authors">
