--- a/publications.html
+++ b/publications.html
@@ -68,6 +68,26 @@
 
     <tr>
         <td>
+            <span class="date"><big><strong>2023</strong></big><br /></span>
+        </td>
+        <td class="publication">
+            <span class="pubtitle">
+                <img src="img/pdficon_small.png" width="16" height="16" alt="PDF" />
+                <a href="https://dl.acm.org/doi/abs/10.1145/3576840.3578310">Rethinking Serendipity in Recommender Systems</a>
+            </span><br />
+            <span class="authors">
+                Denis Kotkov, Alan Medlar, Dorota Glowacka.
+            </span><br /><span class="venuetype"></span><span class="venue">CHIIR 2023</span>.
+            <br />
+            <span class="links">
+            </span>
+        </td>
+    </tr>
+
+
+
+    <tr>
+        <td>
             <span class="date"><big><strong>2022</strong></big><br /></span>
         </td>
         <td class="publication">
