--- a/index.html
+++ b/index.html
@@ -60,20 +60,21 @@
           
 <div class="content">
 <div class="jumbotron">
-    <p>We work on the intersection of machine learning, information retrieval and human-computer interaction. In particular, we focus on all aspects of recommendation, user modelling and personalisation.
+    <p>We work on the intersection of information retrieval, artificial intelligence and human-computer interaction. In particular, we focus on all aspects of recommendation, user modelling and personalisation.
+    <!--<p>We work on the intersection of machine learning, information retrieval and human-computer interaction. In particular, we focus on all aspects of recommendation, user modelling and personalisation.-->
     <!--<p>We use <b>reinforcement learning</b> and <b>user modelling</b> to develop practical systems that help users navigate massive data sets interactively. The research interests of the group include personalisation, <a href="https://doi.org/10.1002/asi.23617">exploratory search</a>, <a href="http://doi.acm.org/10.1145/3025171.3025205">experimental design</a> and <a href="http://doi.acm.org/10.1145/3020165.3022141">evaluation methodology</a>. Our research is published in top venues for information retrieval and human-computer interaction.-->
     We are part of the <a href="https://www.helsinki.fi/en/computer-science">Department of Computer Science</a> at the <a href="https://www.helsinki.fi/en/">University of Helsinki</a>.</p>
     <p><b>Representative publications:</b></p>
     <p><img src="img/pdficon_small.png" width="16" height="16" alt="PDF" />
-    <a href="https://glowacka.org/files/bandit_book.pdf">Bandit algorithms in information retrieval</a> Foundations and Trends in IR<br/>
+    <a href="https://dl.acm.org/doi/full/10.1145/3715275.3732139">Evaluating the Contextual Integrity of False Positives in Algorithmic Travel Surveillance</a> FAccT 2025<br/>
     <img src="img/pdficon_small.png" width="16" height="16" alt="PDF" />
-    <a href="http://doi.acm.org/10.1145/3025171.3025205">Towards fine-grained adaptation of exploration/exploitation in information retrieval</a> IUI 2017<br/>
+    <a href="https://dl.acm.org/doi/full/10.1145/3613904.3642412">Behind the Scenes: Adapting Cinematography and Editing Concepts to Navigation in Virtual Reality</a> CHI 2024<br/>
+    <img src="img/pdficon_small.png" width="16"height="16" alt="PDF" />
+    <a href="https://dl.acm.org/doi/abs/10.1145/3627508.3638342">The Dark Matter of Serendipity in Recommender Systems</a> CHIIR 2024<br />
+    <img src="img/pdficon_small.png" width="16" height="16" alt="PDF" />
+    <a href="http://doi.acm.org/10.1145/2449396.2449413">What we Evaluate When we Evaluate Recommender Systems: Understanding Recommender Systems' Performance using Item Response Theory</a> RecSys 2023</p>
     <img src="img/pdficon_small.png" width="16" height="16" alt="PDF" />
     <a href="https://doi.org/10.1002/asi.23617">Is exploratory search different? A comparison of information search behavior for exploratory and lookup tasks</a> JASIST 2016<br />
-    <img src="img/pdficon_small.png" width="16"height="16" alt="PDF" />
-    <a href="http://doi.acm.org/10.1145/2806416.2806609">Balancing exploration and exploitation: Empirical parameterization of exploratory search systems</a> CIKM 2015<br />
-    <img src="img/pdficon_small.png" width="16" height="16" alt="PDF" />
-    <a href="http://doi.acm.org/10.1145/2449396.2449413">Directing exploratory search: Reinforcement learning from user interactions with keywords</a> IUI 2013</p>
 
 </div>
 
