index page fixes

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <img src="img/pdficon_small.png" width="16" height="16" alt="PDF" />
     <a href="http://doi.acm.org/10.1145/2449396.2449413">What we Evaluate When we Evaluate Recommender Systems: Understanding Recommender Systems' Performance using Item Response Theory</a> RecSys 2023<br />
     <img src="img/pdficon_small.png" width="16" height="16" alt="PDF" />
-    <a href="https://doi.org/10.1002/asi.23617">Is exploratory search different? A comparison of information search behavior for exploratory and lookup tasks</a> JASIST 2016</p>
+    <a href="https://doi.org/10.1002/asi.23617">Is Exploratory Search Different? A Comparison of Information Search Behavior for Exploratory and Lookup Tasks</a> JASIST 2016</p>
 
 </div>
 
