--- a/publications.html
+++ b/publications.html
@@ -68,17 +68,87 @@
 
     <tr>
         <td>
+            <span class="date"><big><strong>2025</strong></big><br /></span>
+        </td>
+
+        <td class="publication">
+            <span class="pubtitle">
+                <img src="img/pdficon_small.png" width="16" height="16" alt="PDF" />
+                <a href="https://dl.acm.org/doi/full/10.1145/3715275.3732139">Evaluating the Contextual Integrity of False Positives in Algorithmic Travel Surveillance</a>
+            </span><br />
+            <span class="authors">
+                Alina Wernick, Alan Medlar, Sofia Söderholm, Dorota Głowacka
+            </span><br /><span class="venuetype"></span><span class="venue">FAccT 2025</span>.
+            <br />
+            <span class="links">
+            </span>
+        </td>
+    </tr>
+
+    <tr>
+        <td></td>
+
+        <td class="publication">
+            <span class="pubtitle">
+                <img src="img/pdficon_small.png" width="16" height="16" alt="PDF" />
+                <a href="https://dl.acm.org/doi/abs/10.1145/3698204.3716473">Paths and Recreation: Inclusive Recommendation of Physical Activities in your Neighbourhood</a>
+            </span><br />
+            <span class="authors">
+                Denis Kotkov, Alan Medlar, Dorota Glowacka.
+            </span><br /><span class="venuetype"></span><span class="venue">CHIIR 2025</span>.
+            <br />
+            <span class="links">
+            </span>
+        </td>
+    </tr>
+
+    <tr>
+        <td>
             <span class="date"><big><strong>2024</strong></big><br /></span>
         </td>
 
         <td class="publication">
             <span class="pubtitle">
                 <img src="img/pdficon_small.png" width="16" height="16" alt="PDF" />
-                <a href="#">Read the Fine Print: Assessing the User Experience of Reading in High Resolution Virtual Reality</a>
+                <a href="https://dl.acm.org/doi/abs/10.1145/3687273.3687278">Unexplored Frontiers: A Review of Empirical Studies of Exploratory Search</a>
+            </span><br />
+            <span class="authors">
+                Alan Medlar, Denis Kotkov, Dorota Glowacka.
+            </span><br /><span class="venuetype"></span><span class="venue">SIGIR Forum</span>.
+            <br />
+            <span class="links">
+            </span>
+        </td>
+    </tr>
+
+    <tr>
+        <td></td>
+
+        <td class="publication">
+            <span class="pubtitle">
+                <img src="img/pdficon_small.png" width="16" height="16" alt="PDF" />
+                <a href="https://dl.acm.org/doi/abs/10.1145/3626772.3657735">On the Negative Perception of Cross-domain Recommendations and Explanations</a>
+            </span><br />
+            <span class="authors">
+                Denis Kotkov, Alan Medlar, Yang Liu, Dorota Glowacka.
+            </span><br /><span class="venuetype"></span><span class="venue">SIGIR 2024</span>.
+            <br />
+            <span class="links">
+            </span>
+        </td>
+    </tr>
+
+    <tr>
+        <td></td>
+
+        <td class="publication">
+            <span class="pubtitle">
+                <img src="img/pdficon_small.png" width="16" height="16" alt="PDF" />
+                <a href="https://dl.acm.org/doi/abs/10.1145/3613905.3650916">Read the Fine Print: Assessing the User Experience of Reading in High Resolution Virtual Reality</a>
             </span><br />
             <span class="authors">
                 Daniel Koch, Alan Medlar, Dorota Glowacka.
-            </span><br /><span class="venuetype"></span><span class="venue">CHI 2024 (to appear)</span>.
+            </span><br /><span class="venuetype"></span><span class="venue">CHI 2024</span>.
             <br />
             <span class="links">
             </span>
@@ -89,11 +159,11 @@
         <td class="publication">
             <span class="pubtitle">
                 <img src="img/pdficon_small.png" width="16" height="16" alt="PDF" />
-                <a href="#">Behind the Scenes: Adapting Cinematography and Editing Concepts to Navigation in Virtual Reality</a>
+                <a href="https://dl.acm.org/doi/full/10.1145/3613904.3642412">Behind the Scenes: Adapting Cinematography and Editing Concepts to Navigation in Virtual Reality</a>
             </span><br />
             <span class="authors">
                 Alan Medlar, Mari Lehtikari, Dorota Glowacka.
-            </span><br /><span class="venuetype"></span><span class="venue">CHI 2024 (to appear)</span>.
+            </span><br /><span class="venuetype"></span><span class="venue">CHI 2024</span>.
             <br />
             <span class="links">
             </span>
@@ -104,11 +174,11 @@
         <td class="publication">
             <span class="pubtitle">
                 <img src="img/pdficon_small.png" width="16" height="16" alt="PDF" />
-                <a href="#">Sample, Nudge and Rank: Exploiting Interpretable GAN Controls for Exploratory Search</a>
+                <a href="https://dl.acm.org/doi/abs/10.1145/3640543.3645156">Sample, Nudge and Rank: Exploiting Interpretable GAN Controls for Exploratory Search</a>
             </span><br />
             <span class="authors">
                 Yang Liu, Alan Medlar, Dorota Glowacka.
-            </span><br /><span class="venuetype"></span><span class="venue">IUI 2024 (to appear)</span>.
+            </span><br /><span class="venuetype"></span><span class="venue">IUI 2024</span>.
             <br />
             <span class="links">
             </span>
@@ -119,11 +189,11 @@
         <td class="publication">
             <span class="pubtitle">
                 <img src="img/pdficon_small.png" width="16" height="16" alt="PDF" />
-                <a href="#">The Dark Matter of Serendipity in Recommender Systems</a>
+                <a href="https://dl.acm.org/doi/abs/10.1145/3627508.3638342">The Dark Matter of Serendipity in Recommender Systems</a>
             </span><br />
             <span class="authors">
                 Denis Kotkov, Alan Medlar, Triin Kask, Dorota Glowacka.
-            </span><br /><span class="venuetype"></span><span class="venue">CHIIR 2024 (to appear)</span>.
+            </span><br /><span class="venuetype"></span><span class="venue">CHIIR 2024</span>.
             <br />
             <span class="links">
             </span>
