fixed news item

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <div class="text">
         <div class="date">03 July 2025</div>
         
-            <p>Short paper accepted at <a href="https://recsys.acm.org/recsys25/">RecSys 2025</a>!</p>
+            <p>Short paper accepted on <a href="https://recsys.acm.org/recsys25/">RecSys 2025</a>!</p>
 
 
         
